feat: add comprehensive documentation for BAB component pattern; include guidelines for initialization, refactoring, and integration with Calimero scripts